# Numerical-analysis

./: gauss-jordan-w-pivot.m  gauss-jordan-w-pivot.py  pyproject.toml
math/: gauss-jacobi.m  lu_decomposition.m
math/integration/: simpsons_rule.m  trapezoidal_rule.m  usage.m
math/intepolation/: general_polynomial_fit.m  lagrange_interpolation.m  newton_interpolation.m  usage.m
online/: package.json
online/src/: App.tsx  matrix-solve-ui.tsx
online/src/components/MatrixSolver/: GaussJordanSolution.tsx  JacobiSolution.tsx  MatrixInput.tsx  PLUSolution.tsx  index.tsx  solverAlgorithms.ts
python/: gauss-jacobi.py  interpolation.py  lu_decomposition.py
python/integration/: itegration_test.py  simpsons_rule.py  trapezoidal_rule.py
