[project]
name = "numerical-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas VyÄas Nery ",email = "vycasnicolas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
